@@ -1,3 +1,8 @@
+2015-11-09 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/at89c51ed2.h: applied patch 247
+	* device/include/at89c51id2.h: new, added, thanks Victor Munoz
+
 2015-11-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCC.lex,
